--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "arrive": "^2.4.1",
     "buefy": "^0.6.1",
     "bulma": "^0.6.1",
-    "bulma-badge": "0.0.3",
     "bulma-divider": "0.0.1",
     "bulma-pageloader": "0.0.2",
     "bulma-pricingtable": "^0.1.0",
-    "bulma-steps": "^0.1.0",
     "bulma-timeline": "^1.1.0",
+    "date-fns": "^1.29.0",
     "firebase": "^4.6.2",
     "font-awesome": "^4.7.0",
     "google-maps": "^3.2.1",
